--- a/app/src/main/res/layout/activity_details_patient.xml
+++ b/app/src/main/res/layout/activity_details_patient.xml
@@ -7,6 +7,23 @@
     tools:context=".DetailsPatientActivity">
 
     <EditText
+        android:id="@+id/txt_name"
+        android:layout_width="280dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/custominput"
+        android:ems="10"
+        android:hint=" Name"
+        android:inputType="textEmailAddress"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.015"
+        app:layout_constraintStart_toStartOf="@+id/textView16"
+        app:layout_constraintTop_toBottomOf="@+id/textView16" />
+
+    <EditText
         android:id="@+id/txt_blood_type"
         android:layout_width="280dp"
         android:layout_height="50dp"
@@ -14,11 +31,9 @@
         android:background="@drawable/custominput"
         android:ems="10"
         android:hint=" Blood Type"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:textColor="@color/black"
-        android:textColorHint="#ACACAC"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -33,14 +48,12 @@
         android:background="@drawable/custominput"
         android:ems="10"
         android:hint=" Phone"
-        android:inputType="phone"
+        android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:textColor="@color/black"
-        android:textColorHint="#ACACAC"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_address" />
 
@@ -52,34 +65,14 @@
         android:background="@drawable/custominput"
         android:ems="10"
         android:hint=" Address"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:textColor="@color/black"
-        android:textColorHint="#ACACAC"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_name" />
-
-    <EditText
-        android:id="@+id/txt_name"
-        android:layout_width="280dp"
-        android:layout_height="50dp"
-        android:background="@drawable/custominput"
-        android:ems="10"
-        android:hint=" Full name"
-        android:inputType="text"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:textColor="@color/black"
-        android:textColorHint="#ACACAC"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
     <ImageView
         android:id="@+id/imageView25"
@@ -100,7 +93,6 @@
         android:layout_marginTop="25dp"
         android:background="@drawable/custom_button"
         android:text="@string/sub"
-        android:textAllCaps="false"
         android:textColor="@color/color3"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,7 +104,7 @@
         android:id="@+id/textView16"
         android:layout_width="313dp"
         android:layout_height="35dp"
-        android:layout_marginTop="340dp"
+        android:layout_marginTop="316dp"
         android:text="@string/textview"
         android:textColor="@color/color2"
         android:textSize="18sp"
