--- a/app/src/main/res/layout/activity_details_patient.xml
+++ b/app/src/main/res/layout/activity_details_patient.xml
@@ -10,17 +10,18 @@
         android:id="@+id/txt_name"
         android:layout_width="280dp"
         android:layout_height="50dp"
-        android:layout_marginTop="12dp"
         android:background="@drawable/custominput"
         android:ems="10"
-        android:hint=" Name"
-        android:inputType="textEmailAddress"
+        android:hint=" Full name"
+        android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="#ACACAC"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.015"
-        app:layout_constraintStart_toStartOf="@+id/textView16"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
     <EditText
@@ -31,9 +32,11 @@
         android:background="@drawable/custominput"
         android:ems="10"
         android:hint=" Blood Type"
-        android:inputType="textEmailAddress"
+        android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="#ACACAC"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -48,9 +51,11 @@
         android:background="@drawable/custominput"
         android:ems="10"
         android:hint=" Phone"
-        android:inputType="textEmailAddress"
+        android:inputType="phone"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="#ACACAC"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -65,9 +70,11 @@
         android:background="@drawable/custominput"
         android:ems="10"
         android:hint=" Address"
-        android:inputType="textEmailAddress"
+        android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="#ACACAC"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
