--- a/app/src/main/res/layout/activity_patient_edit.xml
+++ b/app/src/main/res/layout/activity_patient_edit.xml
@@ -7,15 +7,6 @@
     android:background="@color/color3"
     tools:context=".PatientEdit">
 
-    <ImageView
-        android:id="@+id/imageView30"
-        android:layout_width="507dp"
-        android:layout_height="646dp"
-        android:layout_marginTop="188dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/rectangle_28" />
 
     <ImageView
         android:id="@+id/imageView31"
@@ -42,14 +33,12 @@
         android:id="@+id/textView49"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="65dp"
-        android:layout_marginEnd="94dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="64dp"
         android:fontFamily="sans-serif-medium"
         android:text="User Name "
         android:textColor="@color/color2"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView31"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -57,92 +46,127 @@
         android:id="@+id/textView50"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="143dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="12dp"
         android:fontFamily="sans-serif-medium"
         android:text="Email"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/gray"
         app:layout_constraintStart_toEndOf="@+id/imageView31"
         app:layout_constraintTop_toBottomOf="@+id/textView49" />
 
+    <ImageView
+        android:id="@+id/imageView30"
+        android:layout_width="410dp"
+        android:layout_height="646dp"
+        android:layout_marginTop="188dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/rectangle_28" />
+
     <EditText
         android:id="@+id/editTextTextPersonName2"
-        android:layout_width="362dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="74dp"
-        android:layout_marginBottom="521dp"
+        android:layout_width="330dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
         android:ems="10"
+        android:enabled="false"
         android:hint="User Name"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView30"
+        android:inputType="text"
+        android:textColor="@color/black"
+        android:textColorHint="#ACACAC"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView30"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView31"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/editTextPhone"
-        android:layout_width="361dp"
-        android:layout_height="48dp"
+        android:layout_width="330dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="18dp"
         android:ems="10"
+        android:enabled="false"
         android:hint="Phone"
         android:inputType="phone"
+        android:textColor="@color/black"
+        android:textColorHint="#ACACAC"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
-        app:layout_constraintEnd_toEndOf="@+id/imageView30"
-        app:layout_constraintHorizontal_bias="0.434"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
-        android:layout_width="360dp"
-        android:layout_height="56dp"
+        android:layout_width="330dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="20dp"
         android:ems="10"
+        android:enabled="false"
         android:hint="Password"
         android:inputType="textPassword"
+        android:minHeight="48dp"
+        android:textColor="@color/black"
+        android:textColorHint="#ACACAC"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
-        android:layout_width="361dp"
-        android:layout_height="49dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="330dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:ems="10"
+        android:enabled="false"
         android:hint="Email"
         android:inputType="textEmailAddress"
+        android:textColor="@color/black"
+        android:textColorHint="#ACACAC"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/editTextTextPersonName3"
-        android:layout_width="357dp"
-        android:layout_height="52dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="330dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:ems="10"
+        android:enabled="false"
         android:hint="Blood type"
         android:inputType="textPersonName"
+        android:textColor="@color/black"
+        android:textColorHint="#ACACAC"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.833"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
-        android:id="@+id/textView51"
+        android:id="@+id/txt_reset"
         android:layout_width="193dp"
         android:layout_height="38dp"
+        android:layout_marginTop="45dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Rest your password"
+        android:text="Reset your password"
         android:textColor="@color/color2"
         android:textSize="16sp"
-        tools:layout_editor_absoluteX="65dp"
-        tools:layout_editor_absoluteY="642dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.206"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
