--- a/app/src/main/res/layout/activity_ray_uploaded.xml
+++ b/app/src/main/res/layout/activity_ray_uploaded.xml
@@ -45,10 +45,9 @@
 
     <TextView
         android:id="@+id/textView24"
-        android:layout_width="312dp"
-        android:layout_height="31dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="33dp"
-        android:layout_marginTop="12dp"
         android:layout_marginEnd="117dp"
         android:fontFamily="sans-serif-medium"
         android:text="Please Upload Your rays"
@@ -63,7 +62,7 @@
         android:id="@+id/imageView19"
         android:layout_width="216dp"
         android:layout_height="138dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
