--- a/app/src/main/res/layout/activity_successful_page.xml
+++ b/app/src/main/res/layout/activity_successful_page.xml
@@ -37,9 +37,9 @@
 
     <TextView
         android:id="@+id/textView32"
-        android:layout_width="248dp"
-        android:layout_height="29dp"
-        android:layout_marginTop="464dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
         android:text="your data is recorded !"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -48,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView30" />
 
     <ImageView
         android:id="@+id/imageView5"
@@ -64,8 +64,8 @@
 
     <TextView
         android:id="@+id/textView30"
-        android:layout_width="248dp"
-        android:layout_height="29dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="424dp"
         android:text="Your rays isn't healthy"
         android:textAlignment="center"
@@ -79,9 +79,9 @@
 
     <TextView
         android:id="@+id/textView31"
-        android:layout_width="284dp"
-        android:layout_height="31dp"
-        android:layout_marginTop="504dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
         android:text="Thanks for your donation !"
         android:textAlignment="center"
         android:textColor="#FF4F5A"
@@ -90,5 +90,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView32" />
 </androidx.constraintlayout.widget.ConstraintLayout>
