--- a/app/src/main/res/layout/activity_patient_edit.xml
+++ b/app/src/main/res/layout/activity_patient_edit.xml
@@ -12,8 +12,10 @@
         android:id="@+id/imageView31"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
         android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/imageView32"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logophoto" />
@@ -22,37 +24,12 @@
         android:id="@+id/imageView32"
         android:layout_width="42dp"
         android:layout_height="40dp"
-        android:layout_marginStart="92dp"
+        android:layout_marginStart="134dp"
         android:layout_marginTop="120dp"
         android:background="@drawable/custom_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView31"
         app:srcCompat="@drawable/camera" />
-
-    <TextView
-        android:id="@+id/textView49"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="64dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="User Name "
-        android:textColor="@color/color2"
-        android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView31"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView50"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="12dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Email"
-        android:textColor="@color/gray"
-        app:layout_constraintStart_toEndOf="@+id/imageView31"
-        app:layout_constraintTop_toBottomOf="@+id/textView49" />
 
     <ImageView
         android:id="@+id/imageView30"
@@ -94,7 +71,7 @@
         android:textColor="@color/black"
         android:textColorHint="#ACACAC"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextblood"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,19 +79,18 @@
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
+        android:id="@+id/editTextTextblood"
         android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:ems="10"
         android:enabled="false"
-        android:hint="Password"
+        android:hint="Blood type"
         android:inputType="textPassword"
         android:minHeight="48dp"
         android:textColor="@color/black"
         android:textColorHint="#ACACAC"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -138,35 +114,17 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
         tools:ignore="TouchTargetSizeCheck" />
 
-    <EditText
-        android:id="@+id/editTextTextPersonName3"
-        android:layout_width="330dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:ems="10"
-        android:enabled="false"
-        android:hint="Blood type"
-        android:inputType="textPersonName"
-        android:textColor="@color/black"
-        android:textColorHint="#ACACAC"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
-        tools:ignore="TouchTargetSizeCheck" />
-
     <TextView
         android:id="@+id/txt_reset"
         android:layout_width="193dp"
         android:layout_height="38dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="120dp"
         android:fontFamily="sans-serif-medium"
         android:text="Reset your password"
         android:textColor="@color/color2"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.206"
+        app:layout_constraintHorizontal_bias="0.188"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextblood" />
 </androidx.constraintlayout.widget.ConstraintLayout>
