--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
-        android:text="Reset your Password"
+        android:text="@string/txt_reset"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -65,7 +65,7 @@
         android:layout_marginEnd="10dp"
         android:background="@drawable/custom_input"
         android:ems="10"
-        android:hint="Enter old password"
+        android:hint="@string/current_pass"
         android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
@@ -85,13 +85,13 @@
         android:layout_marginEnd="10dp"
         android:background="@drawable/custom_input"
         android:ems="10"
-        android:hint="Enter new password"
+        android:hint="@string/new_pass"
         android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:textColor="@color/black"
-        android:textSize="14sp"
         android:textColorHint="#ACACAC"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintStart_toStartOf="@+id/view"
         app:layout_constraintTop_toBottomOf="@+id/txt_old_password" />
@@ -105,7 +105,7 @@
         android:layout_marginEnd="10dp"
         android:background="@drawable/custom_input"
         android:ems="10"
-        android:hint="Confirm your new password"
+        android:hint="@string/confirm_pass"
         android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
@@ -124,7 +124,7 @@
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/custom_button"
-        android:text="Reset Password"
+        android:text="@string/btn_reset_password"
         android:textAllCaps="false"
         android:textColor="@color/color3"
         app:layout_constraintBottom_toBottomOf="@+id/view"
