--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -79,52 +79,59 @@
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="199dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="-15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="-27dp"
         android:layout_marginTop="100dp"
-        android:layout_marginEnd="28dp"
+        android:layout_marginEnd="18dp"
         android:text="@string/textviewlog"
         android:textAlignment="center"
-        android:textColor = "?android:textColorPrimary"
+        android:textColor="?android:textColorPrimary"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView11"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toEndOf="@+id/imageView4"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="218dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="-15dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="-27dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="18dp"
         android:text="@string/textviewlog2"
         android:textAlignment="center"
-        android:textColor = "?android:textColorPrimary"
+        android:textColor="?android:textColorPrimary"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView12"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView4" />
+        app:layout_constraintHorizontal_bias="0.24"
+        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="217dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="-15dp"
-        android:layout_marginBottom="44dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="-25dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="76dp"
         android:text="@string/textviewlog3"
         android:textAlignment="center"
-        android:textColor = "?android:textColorPrimary"
+        android:textColor="?android:textColorPrimary"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/txt_email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.714"
-        app:layout_constraintStart_toEndOf="@+id/imageView4" />
+        app:layout_constraintHorizontal_bias="0.38"
+        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <TextView
         android:id="@+id/txt_sign_up"
@@ -143,15 +150,15 @@
 
     <TextView
         android:id="@+id/txt_forgot_password"
-        android:layout_width="202dp"
-        android:layout_height="23dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="80dp"
         android:text="@string/forgpass"
         android:textColor="#FF4F5A"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.364"
+        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_password"
 
@@ -171,6 +178,7 @@
         android:textColor="@color/black"
         android:textColorHint="#ACACAC"
         android:textSize="14sp"
+        android:paddingRight="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
