--- a/app/src/main/res/layout/activity_success_reset_pass.xml
+++ b/app/src/main/res/layout/activity_success_reset_pass.xml
@@ -25,6 +25,7 @@
         android:layout_width="283dp"
         android:layout_height="515dp"
         android:background="@drawable/custom_icon"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,10 +43,10 @@
 
     <TextView
         android:id="@+id/textView14"
-        android:layout_width="236dp"
-        android:layout_height="31dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:text="Successful password reset !"
+        android:text="@string/successful"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/view4"
@@ -58,7 +59,7 @@
         android:layout_width="218dp"
         android:layout_height="45dp"
         android:layout_marginTop="24dp"
-        android:text="You can now use your new password to login to our account ."
+        android:text="@string/text_password"
         android:textColor="#ACACAC"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/view4"
@@ -72,7 +73,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="68dp"
         android:background="@drawable/custom_button"
-        android:text="Login"
+        android:text="@string/btn_login"
         android:textAllCaps="false"
         android:textColor="@color/color3"
         android:textSize="16sp"
