--- a/app/src/main/res/layout/activity_details_donor.xml
+++ b/app/src/main/res/layout/activity_details_donor.xml
@@ -8,13 +8,13 @@
 
 
     <EditText
-        android:id="@+id/txt_blood_type"
+        android:id="@+id/txt_time"
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:layout_marginTop="9dp"
         android:background="@drawable/custominput"
         android:ems="10"
-        android:hint=" Blood Type"
+        android:hint="@string/time"
         android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
@@ -24,17 +24,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_phone" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_phone"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <EditText
-        android:id="@+id/txt_blood_type2"
+        android:id="@+id/txt_other"
         android:layout_width="280dp"
         android:layout_height="70dp"
         android:layout_marginTop="9dp"
         android:layout_marginBottom="17dp"
         android:background="@drawable/custominput"
         android:ems="10"
-        android:hint=" medical history"
+        android:hint="@string/inf"
         android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
@@ -45,7 +46,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_blood_type" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_time" />
 
     <EditText
         android:id="@+id/txt_phone"
@@ -54,7 +55,7 @@
         android:layout_marginTop="9dp"
         android:background="@drawable/custominput"
         android:ems="10"
-        android:hint=" Phone"
+        android:hint="@string/phone"
         android:inputType="phone"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
@@ -73,7 +74,7 @@
         android:layout_marginTop="9dp"
         android:background="@drawable/custominput"
         android:ems="10"
-        android:hint=" Address"
+        android:hint="@string/address"
         android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
@@ -83,15 +84,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_name" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_meical" />
 
     <EditText
-        android:id="@+id/txt_name"
+        android:id="@+id/txt_meical"
         android:layout_width="280dp"
         android:layout_height="50dp"
+        android:layout_marginTop="9dp"
         android:background="@drawable/custominput"
         android:ems="10"
-        android:hint=" Full name"
+        android:hint="@string/medical"
         android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
@@ -127,32 +129,32 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_blood_type" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_time" />
 
     <TextView
         android:id="@+id/textView16"
-        android:layout_width="313dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="295dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="300dp"
         android:text="@string/textview"
         android:textColor="@color/color2"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.673"
+        app:layout_constraintHorizontal_bias="0.281"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView23"
-        android:layout_width="212dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="152dp"
-        android:text="Hi Donor .."
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="156dp"
+        android:text="@string/hi_doctor"
         android:textColor="@color/color2"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.613"
+        app:layout_constraintHorizontal_bias="0.34"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView25" />
 
