--- a/app/src/main/res/layout/activity_health.xml
+++ b/app/src/main/res/layout/activity_health.xml
@@ -35,7 +35,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="9dp"
         android:background="@android:color/transparent"
-        android:text="Back"
+        android:text="@string/back"
         android:textColor="@color/white"
         android:visibility="invisible" />
 
@@ -48,7 +48,7 @@
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="6dp"
         android:background="@android:color/transparent"
-        android:text="Next"
+        android:text="@string/next"
         android:textColor="@color/white" />
 
 </RelativeLayout>
