--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -27,8 +27,8 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="45dp"
         android:fontFamily="sans-serif"
-        android:text="Join"
-        android:textColor = "?android:textColorPrimary"
+        android:text="@string/reg1"
+        android:textColor="?android:textColorPrimary"
         android:textSize="60sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -40,13 +40,13 @@
         android:background="@drawable/custom_input"
         android:backgroundTintMode="add"
         android:ems="10"
-        android:hint="first name"
-        android:textSize="14sp"
+        android:hint="@string/first"
         android:inputType="textPersonName"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:textColor="@color/black"
         android:textColorHint="#ACACAC"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/Email"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -59,7 +59,7 @@
         android:background="@drawable/custom_button"
         android:backgroundTintMode="add"
         android:fontFamily="sans-serif"
-        android:text="Sign Up"
+        android:text="@string/btn_signup"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/white"
@@ -76,13 +76,13 @@
         android:background="@drawable/custom_input"
         android:backgroundTintMode="add"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:textSize="14sp"
-        android:inputType="textEmailAddress"
         android:textColor="@color/black"
         android:textColorHint="#ACACAC"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -128,18 +128,18 @@
         android:layout_marginTop="7dp"
         android:background="@drawable/custom_input"
         android:backgroundTintMode="add"
-        android:ems="10"
-        android:hint="password"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:textSize="14sp"
-        android:inputType="textPassword"
-        android:textColor="@color/black"
-        android:textColorHint="#ACACAC"
         android:drawableRight="@drawable/visibility_off_icon"
         android:drawableTint="#ACACAC"
-        android:paddingRight="18dp"
+        android:ems="10"
+        android:hint="@string/password2"
+        android:inputType="textPassword"
         android:longClickable="false"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingRight="18dp"
+        android:textColor="@color/black"
+        android:textColorHint="#ACACAC"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -152,18 +152,18 @@
         android:layout_marginTop="7dp"
         android:background="@drawable/custom_input"
         android:backgroundTintMode="add"
-        android:ems="10"
-        android:hint="Confirm password"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:textSize="14sp"
-        android:inputType="textPassword"
-        android:textColor="@color/black"
-        android:textColorHint="#ACACAC"
         android:drawableRight="@drawable/visibility_off_icon"
         android:drawableTint="#ACACAC"
-        android:paddingRight="18dp"
+        android:ems="10"
+        android:hint="@string/confirm_password"
+        android:inputType="textPassword"
         android:longClickable="false"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingRight="18dp"
+        android:textColor="@color/black"
+        android:textColorHint="#ACACAC"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -175,7 +175,7 @@
         android:layout_height="28dp"
         android:layout_marginTop="8dp"
         android:backgroundTintMode="add"
-        android:text="Already have an account ?"
+        android:text="@string/txt"
         android:textColor="#ACACAC"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -190,7 +190,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="20dp"
         android:backgroundTintMode="add"
-        android:text="Sign in"
+        android:text="@string/sign_in"
         android:textColor="@color/color2"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -208,13 +208,13 @@
         android:background="@drawable/custom_input"
         android:backgroundTintMode="add"
         android:ems="10"
-        android:hint="last name"
+        android:hint="@string/last"
         android:inputType="textPersonName"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
-        android:textSize="14sp"
         android:textColor="@color/black"
         android:textColorHint="#ACACAC"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/Email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txt_fname"
@@ -228,8 +228,8 @@
         android:layout_marginStart="34dp"
         android:layout_marginTop="117dp"
         android:fontFamily="sans-serif"
-        android:text="Us"
-        android:textColor = "?android:textColorPrimary"
+        android:text="@string/reg2"
+        android:textColor="?android:textColorPrimary"
         android:textSize="60sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
