--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,38 +2,42 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item android:id="@+id/edit_profile"
-            android:title="Edit profile"
+            android:title="@string/profile"
             android:icon="@drawable/edit_profile"/>
 
         <item android:id="@+id/recommend"
-            android:title="Recommend"
+            android:title="@string/recommend"
             android:icon="@drawable/recommend"/>
 
+        <item android:id="@+id/doctors"
+            android:title="@string/doctors"
+            android:icon="@drawable/doctor_icon"/>
+
         <item android:id="@+id/about_us"
-            android:title="About Us"
+            android:title="@string/about_us"
             android:icon="@drawable/about"/>
 
         <item android:id="@+id/feedback"
-            android:title="Feedback"
+            android:title="@string/feedback_menu"
             android:icon="@drawable/feedback"/>
 
 
     </group>
 
     <group android:checkableBehavior="single">
-        <item android:title="Others">
+        <item android:title="@string/other">
             <menu>
 
                 <item android:id="@+id/nav_share"
-                    android:title="Share"
+                    android:title="@string/share"
                     android:icon="@drawable/share"/>
 
                 <item android:id="@+id/nav_logout"
-                    android:title="Logout"
+                    android:title="@string/logout"
                     android:icon="@drawable/logout" />
 
                 <item android:id="@+id/nav_rate"
-                    android:title="Rate us"
+                    android:title="@string/rate_us"
                     android:icon="@drawable/star" />
             </menu>
         </item>
